--- a/style.css
+++ b/style.css
@@ -126,9 +126,8 @@ display: none;
   bottom: 0;
   left: 0;
   background: var(--alpha-color);
-
   backdrop-filter: blur(50px);
-  transition: 1s;
+  transition: 0.6s;
 }
 
 .music-seek-bar {
@@ -154,7 +153,7 @@ display: none;
   font-weight: 300;
   font-size: 20px;
   text-align: center;
-  margin-top: 5px;
+  margin-top: -20px;
   text-transform: capitalize;
 }
 
@@ -272,11 +271,14 @@ display: none;
 }
 
 .back-btn {
-  left: 40px;
+margin-top: -40px;
+  left: 30px;
   cursor: pointer;
 }
 
 .nav-btn {
+  
+  margin-top: -40px;
   right: 40px;
   cursor: pointer;
 }
@@ -314,18 +316,16 @@ display: none;
 /* playlist section */
 
 .playlist {
-  width: 100%;
+
   height: 100%;
   position: fixed;
   top: 0;
   right: -100%;
-  padding: 30px 0;
+  
+background-color: #2C3639;
 
-  background-image: url('all/images/2.jpg');
-  background-size: cover;
-  background-position: center;
-  z-index: 3;
-  transition: 1s;
+
+  transition: 0.5s;
   overflow: auto;
 }
 
@@ -335,7 +335,7 @@ display: none;
 
 .title {
   font-weight: 300;
-  font-size: 40px;
+  font-size: 1.5rem;
   text-align: center;
   margin-top: 15px;
   text-transform: capitalize;
@@ -403,17 +403,18 @@ nav {
 }
 
 nav a {
+  width: 60px;
+  height: 60px;
   padding: 10px;
-  text-decoration: underline;
   color: #fff;
   margin: 10px;
-  border-radius: 50%;
-  background: #2d5454;
-  transform: scale(1.25);
+
+ 
 }
 
 nav a:focus {
-  border: 2px solid black;
+  background: orange;
+  border-radius: 10px;
 }
 
 nav h1 {
